--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 		<version>2.3.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.teste</groupId>
-	<artifactId>projetoteste</artifactId>
+	<groupId>com.guipretto</groupId>
+	<artifactId>simpletodo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>projetoteste</name>
 	<description>Projeto teste </description>
@@ -63,7 +63,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<scope>public</scope>
 			<exclusions>
 				<exclusion>
 					<groupId>org.junit.vintage</groupId>
